--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    
+    <button>Change Pixel Size (Max 100)</button>
     <div id="container"></div>
 
     <script src="etch.js"></script>
